Collision + xml load of unit info

--- a/HordeDefence/HordeDefence.vcxproj
+++ b/HordeDefence/HordeDefence.vcxproj
@@ -81,23 +81,38 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Action.cpp" />
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="Armor.cpp" />
+    <ClCompile Include="Attack.cpp" />
+    <ClCompile Include="AttackMove.cpp" />
     <ClCompile Include="base64\base64.cpp" />
     <ClCompile Include="bmp.cpp" />
     <ClCompile Include="Buff.cpp" />
+    <ClCompile Include="Circle.cpp" />
+    <ClCompile Include="Collision.cpp" />
     <ClCompile Include="Control.cpp" />
     <ClCompile Include="Debuff.cpp" />
+    <ClCompile Include="Dying.cpp" />
     <ClCompile Include="GameGUI.cpp" />
+    <ClCompile Include="GameMath.cpp" />
     <ClCompile Include="GUI.cpp" />
+    <ClCompile Include="HumanCharacter.cpp" />
+    <ClCompile Include="Idle.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="Item.cpp" />
-    <ClCompile Include="Knight.cpp" />
+    <ClCompile Include="LoadingScreen.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MainMenuGUI.cpp" />
     <ClCompile Include="Model.cpp" />
+    <ClCompile Include="MoveTo.cpp" />
+    <ClCompile Include="MoveToInRange.cpp" />
+    <ClCompile Include="MoveToUnit.cpp" />
     <ClCompile Include="Offhand.cpp" />
-    <ClCompile Include="Point.cpp" />
-    <ClCompile Include="Sprite.cpp" />
+    <ClCompile Include="Rectangle.cpp" />
+    <ClCompile Include="SettingsGUI.cpp" />
+    <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="Teleporter.cpp" />
     <ClCompile Include="TerrainFeature.cpp" />
     <ClCompile Include="textureLoader.cpp" />
     <ClCompile Include="Tile.cpp" />
@@ -120,29 +135,45 @@
     <ClCompile Include="TmxLoader\TmxTileset.cpp" />
     <ClCompile Include="TmxLoader\TmxUtil.cpp" />
     <ClCompile Include="Unit.cpp" />
-    <ClCompile Include="Vect.cpp" />
+    <ClCompile Include="UnitType.cpp" />
+    <ClCompile Include="Vector3D.cpp" />
     <ClCompile Include="View.cpp" />
     <ClCompile Include="Weapon.cpp" />
     <ClCompile Include="worldCreation.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Action.h" />
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Armor.h" />
+    <ClInclude Include="Attack.h" />
+    <ClInclude Include="AttackMove.h" />
     <ClInclude Include="base64\base64.h" />
     <ClInclude Include="bmp.h" />
     <ClInclude Include="Buff.h" />
+    <ClInclude Include="Circle.h" />
+    <ClInclude Include="Collision.h" />
     <ClInclude Include="Control.h" />
     <ClInclude Include="Debuff.h" />
+    <ClInclude Include="Dying.h" />
     <ClInclude Include="GameGUI.h" />
+    <ClInclude Include="GameMath.h" />
     <ClInclude Include="GUI.h" />
+    <ClInclude Include="HumanCharacter.h" />
+    <ClInclude Include="Idle.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="Item.h" />
-    <ClInclude Include="Knight.h" />
+    <ClInclude Include="LoadingScreen.h" />
     <ClInclude Include="Main.h" />
+    <ClInclude Include="MainMenuGUI.h" />
     <ClInclude Include="Model.h" />
+    <ClInclude Include="MoveTo.h" />
+    <ClInclude Include="MoveToInRange.h" />
+    <ClInclude Include="MoveToUnit.h" />
     <ClInclude Include="Offhand.h" />
-    <ClInclude Include="Point.h" />
-    <ClInclude Include="Sprite.h" />
+    <ClInclude Include="Rectangle.h" />
+    <ClInclude Include="SettingsGUI.h" />
+    <ClInclude Include="GameObject.h" />
+    <ClInclude Include="Teleporter.h" />
     <ClInclude Include="TerrainFeature.h" />
     <ClInclude Include="textureLoader.h" />
     <ClInclude Include="Tile.h" />
@@ -167,7 +198,8 @@
     <ClInclude Include="TmxLoader\TmxTileset.h" />
     <ClInclude Include="TmxLoader\TmxUtil.h" />
     <ClInclude Include="Unit.h" />
-    <ClInclude Include="Vect.h" />
+    <ClInclude Include="UnitType.h" />
+    <ClInclude Include="Vector3D.h" />
     <ClInclude Include="View.h" />
     <ClInclude Include="Weapon.h" />
     <ClInclude Include="worldCreation.h" />
